# bike-geometry-comparator

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  ruff.toml  shell.nix
.github/workflows/: build.yml  deploy.yml
data/cannondale/: defaults.ini
data/cannondale/supersix_evo/: metric_mappings.ini
data/cannondale/superx/: defaults.ini  metric_mappings.ini
data/cannondale/synapse/: metric_mappings.ini
data/cannondale/systemsix/: metric_mappings.ini
data/cannondale/topstone/: metric_mappings.ini
data/canyon/: defaults.ini  metric_mappings.ini
data/canyon/aeroad/: defaults.ini
data/canyon/endurace/: defaults.ini
data/canyon/exceed/: defaults.ini
data/canyon/grail/: defaults.ini
data/canyon/grand_canyon/: defaults.ini  metric_mappings.ini
data/canyon/grizl/: defaults.ini
data/canyon/inflite/: defaults.ini
data/canyon/lux_trail/: defaults.ini  metric_mappings.ini
data/canyon/neyron/: metric_mappings.ini
data/canyon/sender/: defaults.ini  metric_mappings.ini
data/canyon/speedmax/: defaults.ini
data/cube/: defaults.ini  metric_mappings.ini
data/fairlight/: defaults.ini
data/giant/: defaults.ini
data/rose/: defaults.ini
data/scott/: defaults.ini  metric_mappings.ini
data/specialized/: defaults.ini  metric_mappings.ini
data/trek/: defaults.ini
src/bike_geometry_comparator/: assembly.py  db_utils.py  main.py  sql.py  validation.py
src/client/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.js  vite.config.ts
tests/: conftest.py  test_data_validity.py
(+395 files in other folders)
