[project]
name = "bike-geometry-comparator"
version = "0.1.0"
description = "Bike geometries database and comparison tool"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.1",
    "rich>=14.3.3",
]

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.2",
    "pyrefly>=0.53.0",
]

[project.scripts]
bgc = "bike_geometry_comparator.main:main"
ingest = "bike_geometry_comparator.ingest.webscraper.main:main"
ingest_fairlight = "bike_geometry_comparator.ingest.fairlight:main"
ingest_trek = "bike_geometry_comparator.ingest.trek:main"

[tool.uv.build-backend]
source-exclude = ["tests"]
